updated vercel.json and tsconfig.build.json

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -6,5 +6,9 @@
     "dist",
     "**/*spec.ts",
     "prisma"
-  ]
+  ],
+  "compilerOptions": {
+    "outDir": "./dist",
+    "rootDir": "./src"
+  }
 }
