revert back to localhost

--- a/.env
+++ b/.env
@@ -5,8 +5,8 @@ POSTGRES_DB=bookstoredb
 # See https://www.prisma.io/docs/concepts/database-connectors/postgresql
 # Host value is the default container name for postgres - @nest-postgres:5432
 # change it when changing the container name
-DATABASE_URL=postgres://default:XghTWQk4lm3J@ep-snowy-hall-a48eks40.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require
-#DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:5432/${POSTGRES_DB}?schema=public
+DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:5432/${POSTGRES_DB}?schema=public
+# DATABASE_URL=postgres://default:XghTWQk4lm3J@ep-snowy-hall-a48eks40.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require
 # To have acccess to the database container from your local machine 
 # use the DATABASE_URL below which replaces nest-postgres (container name) with localhost
 #DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:5432/${POSTGRES_DB}?schema=public
